--- a/theme/book.css
+++ b/theme/book.css
@@ -8,7 +8,7 @@
 
 .sidebar-scrollbox {
   position: relative !important;
-  margin: 0 10px;
+  margin: 10px;
 }
 
 
@@ -19,25 +19,4 @@
 .chapter li {
   font-size: 1.5rem;
   font-weight: 600;
-}
-
-#logo-container {
-  display: flex;
-  align-items: center;
-  margin-top: 10px;
-}
-
-#logo {
-  padding: 0px 15px 0px 20px;
-}
-
-#logo-text > a {
-  text-decoration: none;
-}
-
-#logo-text > a > h1 {
-  font-size: 1.9rem;
-  color: #000;
-  font-weight: bold;
-  text-decoration: none;
 }
